[package]
name = "bin_chicken"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A sane alternative to the UNIX rm command"
repository = "https://github.com/Danny-Duck/bin_chicken" 
keywords = ["trash", "cli", "rm", "bin", "tool"]
categories = ["command-line-utilities"]
crate-type = ["bin"]

[[bin]]
bench = false
path = "src/main.rs"
name = "bin_chicken"

[dependencies]
clap = { version = "4.4.10", features = ["derive", "unicode", "cargo"] }
dialoguer = "0.10.2"
dirs = "4.0.0"
mockall = "0.11.4"
tempfile = "3.8.1"
